Fixed spacing

--- a/src/Refine.css
+++ b/src/Refine.css
@@ -2,6 +2,7 @@
     float: left;
     font-family: "Courier New", Courier, monospace;
     font-size: 20px;
+    padding-top:5%;
     padding-left: 11%;
     padding-right: 5%;
 }
